--- a/package.xml
+++ b/package.xml
@@ -22,7 +22,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>pcl_ros</build_depend>
-  <build_depend>livox_ros_driver</build_depend>
+  <build_depend>livox_ros_driver2</build_depend>
   <build_depend>message_generation</build_depend>
 
   <exec_depend>geometry_msgs</exec_depend>
@@ -33,7 +33,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
-  <exec_depend>livox_ros_driver</exec_depend>
+  <exec_depend>livox_ros_driver2</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
   <test_depend>rostest</test_depend>
