--- a/config/adaptive_filter_parameters.yaml
+++ b/config/adaptive_filter_parameters.yaml
@@ -5,17 +5,20 @@
   enableImu: true
   enableWheel: true
   enableLidar: true
+  enableVisual: false
   filterFreq: "l"
   
   # Covariance gains
   lidarG: 75
   wheelG: 0.5
+  visualG: 0.1
   imuG: 100
 
   # Topic names
   imuTopic: "/imu"
   wheelTopic: "/odom"
   FastLIO2_OdometryTopic: "/Odometry"
+  cameraTopic: "/odom"
   filterTopic: "/filter_odom"
 
   # Wheel odometry covariance adaptive positive constants
