--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(ekf_fast_lio2)
+project(ekf_fast_lio)
 
 SET(CMAKE_BUILD_TYPE "Debug")
 
@@ -51,9 +51,10 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   pcl_ros
   tf
-  livox_ros_driver2
+  livox_ros_driver
   message_generation
   eigen_conversions
+  adaptive_odom_filter
 )
 
 find_package(Eigen3 REQUIRED)
@@ -66,6 +67,7 @@ include_directories(
   ${EIGEN3_INCLUDE_DIR}
   ${PCL_INCLUDE_DIRS}
   ${PYTHON_INCLUDE_DIRS}
+  ${ekf_adaptive_INCLUDE_DIRS}
   include)
 
 add_message_files(
@@ -79,13 +81,11 @@ generate_messages(
 )
 
 catkin_package(
-  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs message_runtime
+  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs message_runtime adaptive_odom_filter
   DEPENDS EIGEN3 PCL
   INCLUDE_DIRS
-  CATKIN_DEPENDS adaptive_filter
 )
 
 add_executable(fastlio_mapping src/laserMapping.cpp include/ikd-Tree/ikd_Tree.cpp src/preprocess.cpp)
 target_link_libraries(fastlio_mapping ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES})
 target_include_directories(fastlio_mapping PRIVATE ${PYTHON_INCLUDE_DIRS})
-
