--- a/package.xml
+++ b/package.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0"?>
-<package format="2">
-  <name>ekf_fast_lio2</name>
-  <version>1.0.0</version>
-  <description>EKF-based sensor fusion package for Fast-LIO2 and wheel odometry.</description>
-  
-  <maintainer email="gilmarpcruzjunior@gmail.com">Gilmar Pereira</maintainer>
-  <maintainer email="gmdeoliveira@ymail.com">Gabriel Malaquias</maintainer>
-  
+<package>
+  <name>ekf_fast_lio</name>
+  <version>0.0.0</version>
+
+  <description>
+    This is a modified version of LOAM which is original algorithm
+    is described in the following paper:
+    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
+      Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
+  </description>
+
+  <maintainer email="dev@livoxtech.com">claydergc</maintainer>
+
   <license>BSD</license>
 
-  <author >Gilmar Pereira da Cruz Junior</author>
-  <author >Gabriel Malaquias de Oliveira</author>
-
+  <author email="zhangji@cmu.edu">Ji Zhang</author>
+  
   <buildtool_depend>catkin</buildtool_depend>
-
   <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
@@ -22,27 +25,25 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>pcl_ros</build_depend>
-  <build_depend>livox_ros_driver2</build_depend>
-  <build_depend>message_generation</build_depend>
-  
-  <build_depend>adaptive_filter</build_depend>
-  <exec_depend>adaptive_filter</exec_depend>
+  <build_depend>livox_ros_driver</build_depend>
+  <build_depend>message_generation</build_depend> 
+  <build_depend>adaptive_odom_filter</build_depend> 
 
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>tf</exec_depend>
-  <exec_depend>pcl_ros</exec_depend>
-  <exec_depend>livox_ros_driver2</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
+  <run_depend>adaptive_odom_filter</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>rospy</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>pcl_ros</run_depend>
+  <run_depend>livox_ros_driver</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>rosbag</test_depend>
 
   <export>
   </export>
-
 </package>
