--- a/config/adaptive_filter_parameters.yaml
+++ b/config/adaptive_filter_parameters.yaml
@@ -6,7 +6,7 @@
   enableImu: true
   enableWheel: true
   enableLidar: true
-  enableVisual: true
+  enableVisual: false
   filterFreq: "l"
   freq: 200.0
 
@@ -33,7 +33,7 @@
   # type of adaptative function
   lidar_type_func: 2                        # 0: linear; 1: exponential; 2: original message
   visual_type_func: 2                       # 0: linear; 1: exponential; 2: original message
-  wheel_type_func: 1                        # 0: our function; 1: original message
+  wheel_type_func: 0                        # 0: our function; 1: original message
 
   # type of cameras
   camera_type: 1                      # 1: tracking; 2: depth
