--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>ekf_fast_lio</name>
+  <name>ekf_fast_lio2</name>
   <version>0.0.0</version>
 
   <description>
